fix: task list overflowing
scroll added

--- a/src/components/Layout/Main Panel/TaskPanel.module.css
+++ b/src/components/Layout/Main Panel/TaskPanel.module.css
@@ -6,12 +6,41 @@
 
 .main-content .content-container {
   max-width: 700px;
+  max-height: 100vh;
   width: 100%;
   padding-top: 51px;
+  display: flex;
+  flex-direction: column;
 }
 
 .main-content__header span{
   font-size: 2.2em;
   font-weight: bold;
   color: var(--primary-text-color);
+}
+
+.task-container {
+  overflow: auto;
+  flex-grow: 1;
+}
+
+/* width */
+.task-container::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+.task-container::-webkit-scrollbar-track {
+  background: #f5f5f5;
+}
+
+/* Handle */
+.task-container::-webkit-scrollbar-thumb {
+  background: rgb(233, 233, 233);
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.task-container::-webkit-scrollbar-thumb:hover {
+  background: rgb(169, 169, 169);
 }
